Serilog templated connection string

--- a/CadmusMqdqApi/appsettings.json
+++ b/CadmusMqdqApi/appsettings.json
@@ -8,7 +8,7 @@
     "Data": "cadmus-mqdq"
   },
   "Serilog": {
-    "ConnectionString": "mongodb://localhost:27017/cadmus-mqdq-log",
+    "ConnectionString": "mongodb://localhost:27017/{0}-log",
     "MaxMbSize": 10,
     "TableName": "Logs",
     "MinimumLevel": {
