--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -36,7 +36,7 @@ services:
       - cadmus-network
 
   cadmus-api:
-    image: vedph2020/cadmus_mqdq_api:1.0.2
+    image: vedph2020/cadmus_mqdq_api:1.0.4
     ports:
       # https://stackoverflow.com/questions/48669548/why-does-aspnet-core-start-on-port-80-from-within-docker
       - 53323:80
@@ -58,7 +58,7 @@ services:
       - SENDGRID__SENDEREMAIL=info@cadmus.com
       - SENDGRID__SENDERNAME=cadmus
       - SENDGRID__APIKEY=todo
-      - SERILOG__CONNECTIONSTRING=mongodb://cadmus-mongo:27017/cadmus-mqdq-log
+      - SERILOG__CONNECTIONSTRING=mongodb://cadmus-mongo:27017/{0}-log
       - STOCKUSERS__0__PASSWORD=P4ss-W0rd!
     networks:
       - cadmus-network
