--- a/CadmusMqdqApi/CadmusMqdqApi.csproj
+++ b/CadmusMqdqApi/CadmusMqdqApi.csproj
@@ -5,34 +5,36 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Cadmus.General.Parts" Version="1.0.4" />
-    <PackageReference Include="Cadmus.Seed.General.Parts" Version="1.0.4" />
-    <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="6.0.6" NoWarn="NU1605" />
-    <PackageReference Include="Microsoft.AspNetCore.Authentication.OpenIdConnect" Version="6.0.6" NoWarn="NU1605" />
+    <PackageReference Include="Cadmus.General.Parts" Version="2.1.0" />
+    <PackageReference Include="Cadmus.Seed.General.Parts" Version="2.1.0" />
+    <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="6.0.9" NoWarn="NU1605" />
+    <PackageReference Include="Microsoft.AspNetCore.Authentication.OpenIdConnect" Version="6.0.9" NoWarn="NU1605" />
     <PackageReference Include="AspNetCore.Identity.Mongo" Version="8.3.3" />
-    <PackageReference Include="Cadmus.Index.Sql" Version="4.0.1" />
+    <PackageReference Include="Cadmus.Index.Sql" Version="4.1.0" />
     <PackageReference Include="Cadmus.Philology.Parts" Version="4.0.0" />
-    <PackageReference Include="Cadmus.Core" Version="4.0.1" />
-    <PackageReference Include="Cadmus.Mongo" Version="4.0.1" />
-    <PackageReference Include="Cadmus.Seed" Version="4.0.1" />
+    <PackageReference Include="Cadmus.Core" Version="4.1.0" />
+    <PackageReference Include="Cadmus.Mongo" Version="4.1.0" />
+    <PackageReference Include="Cadmus.Seed" Version="4.1.0" />
     <PackageReference Include="Cadmus.Seed.Philology.Parts" Version="4.0.0" />
     <PackageReference Include="Fusi.Antiquity" Version="2.0.0" />
     <PackageReference Include="Fusi.Microsoft.Extensions.Configuration.InMemoryJson" Version="1.0.3" />
-    <PackageReference Include="MessagingApi" Version="1.0.2" />
-    <PackageReference Include="Cadmus.Api.Controllers" Version="4.0.1" />
-    <PackageReference Include="Cadmus.Api.Models" Version="4.0.0" />
-    <PackageReference Include="Cadmus.Api.Services" Version="4.0.1" />
-    <PackageReference Include="Microsoft.AspNetCore.Mvc.NewtonsoftJson" Version="6.0.6" />
+    <PackageReference Include="MessagingApi" Version="2.0.1" />
+    <PackageReference Include="Cadmus.Api.Controllers" Version="4.2.0" />
+    <PackageReference Include="Cadmus.Api.Models" Version="4.2.0" />
+    <PackageReference Include="Cadmus.Api.Services" Version="4.2.0" />
+    <PackageReference Include="Microsoft.AspNetCore.Mvc.NewtonsoftJson" Version="6.0.9" />
     <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
     <PackageReference Include="Polly" Version="7.2.3" />
-    <PackageReference Include="Serilog" Version="2.11.0" />
-    <PackageReference Include="Serilog.AspNetCore" Version="5.0.0" />
-    <PackageReference Include="Serilog.Exceptions" Version="8.2.0" />
-    <PackageReference Include="Serilog.Extensions.Hosting" Version="4.2.0" />
-    <PackageReference Include="Serilog.Sinks.Console" Version="4.0.1" />
+    <PackageReference Include="Serilog" Version="2.12.0" />
+    <PackageReference Include="Serilog.AspNetCore" Version="6.0.1" />
+    <PackageReference Include="Serilog.Exceptions" Version="8.4.0" />
+    <PackageReference Include="Serilog.Extensions.Hosting" Version="5.0.1" />
+    <PackageReference Include="Serilog.Sinks.Console" Version="4.1.0" />
     <PackageReference Include="Serilog.Sinks.File" Version="5.0.0" />
-    <PackageReference Include="Serilog.Sinks.MongoDB" Version="5.1.5" />
-    <PackageReference Include="Swashbuckle.AspNetCore" Version="6.3.1" />
+    <PackageReference Include="Serilog.Sinks.MongoDB" Version="5.3.1" />
+    <PackageReference Include="Swashbuckle.AspNetCore" Version="6.4.0" />
   </ItemGroup>
+
+  <ProjectExtensions><VisualStudio><UserProperties wwwroot_4preview-profile_1json__JsonSchema="https://docs.renovatebot.com/renovate-schema.json" /></VisualStudio></ProjectExtensions>
 
 </Project>
