--- a/CadmusMqdqApi/CadmusMqdqApi.csproj
+++ b/CadmusMqdqApi/CadmusMqdqApi.csproj
@@ -1,28 +1,29 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
-    <TargetFramework>net6.0</TargetFramework>
+    <TargetFramework>net7.0</TargetFramework>
+	<Nullable>enable</Nullable>
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Cadmus.General.Parts" Version="2.1.0" />
-    <PackageReference Include="Cadmus.Seed.General.Parts" Version="2.1.0" />
-    <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="6.0.9" NoWarn="NU1605" />
-    <PackageReference Include="Microsoft.AspNetCore.Authentication.OpenIdConnect" Version="6.0.9" NoWarn="NU1605" />
+    <PackageReference Include="Cadmus.General.Parts" Version="3.0.0" />
+    <PackageReference Include="Cadmus.Seed.General.Parts" Version="3.0.0" />
+    <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="7.0.0" NoWarn="NU1605" />
+    <PackageReference Include="Microsoft.AspNetCore.Authentication.OpenIdConnect" Version="7.0.0" NoWarn="NU1605" />
     <PackageReference Include="AspNetCore.Identity.Mongo" Version="8.3.3" />
-    <PackageReference Include="Cadmus.Index.Sql" Version="4.1.0" />
-    <PackageReference Include="Cadmus.Philology.Parts" Version="4.0.0" />
-    <PackageReference Include="Cadmus.Core" Version="4.1.0" />
-    <PackageReference Include="Cadmus.Mongo" Version="4.1.0" />
-    <PackageReference Include="Cadmus.Seed" Version="4.1.0" />
-    <PackageReference Include="Cadmus.Seed.Philology.Parts" Version="4.0.0" />
-    <PackageReference Include="Fusi.Antiquity" Version="2.0.0" />
-    <PackageReference Include="Fusi.Microsoft.Extensions.Configuration.InMemoryJson" Version="1.0.3" />
-    <PackageReference Include="MessagingApi" Version="2.0.1" />
-    <PackageReference Include="Cadmus.Api.Controllers" Version="4.2.0" />
-    <PackageReference Include="Cadmus.Api.Models" Version="4.2.0" />
-    <PackageReference Include="Cadmus.Api.Services" Version="4.2.0" />
-    <PackageReference Include="Microsoft.AspNetCore.Mvc.NewtonsoftJson" Version="6.0.9" />
+    <PackageReference Include="Cadmus.Index.Sql" Version="5.0.0" />
+    <PackageReference Include="Cadmus.Philology.Parts" Version="5.0.0" />
+    <PackageReference Include="Cadmus.Core" Version="5.0.0" />
+    <PackageReference Include="Cadmus.Mongo" Version="5.0.0" />
+    <PackageReference Include="Cadmus.Seed" Version="5.0.0" />
+    <PackageReference Include="Cadmus.Seed.Philology.Parts" Version="5.0.0" />
+    <PackageReference Include="Fusi.Antiquity" Version="3.0.0" />
+    <PackageReference Include="Fusi.Microsoft.Extensions.Configuration.InMemoryJson" Version="2.0.0" />
+    <PackageReference Include="MessagingApi" Version="3.0.0" />
+    <PackageReference Include="Cadmus.Api.Controllers" Version="5.0.0" />
+    <PackageReference Include="Cadmus.Api.Models" Version="5.0.0" />
+    <PackageReference Include="Cadmus.Api.Services" Version="5.0.0" />
+    <PackageReference Include="Microsoft.AspNetCore.Mvc.NewtonsoftJson" Version="7.0.0" />
     <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
     <PackageReference Include="Polly" Version="7.2.3" />
     <PackageReference Include="Serilog" Version="2.12.0" />
